# Macroa

./: .env.example  .gitignore  CHANGELOG.md  FEATURES.md  README.md  install.sh  pyproject.toml  uninstall.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish-bootstrap.yml  release.yml
macroa/channels/: __init__.py  base.py  discord.py  telegram.py
macroa/cli/: main.py  renderer.py  wizard.py
macroa/config/: settings.py  skill_registry.py
macroa/drivers/: fs_driver.py  llm_driver.py  memory_driver.py  network_driver.py  shell_driver.py
macroa/kernel/: __init__.py  agent.py  audit.py  budget.py  clock.py  context.py  daemon.py  dispatcher.py  escalation.py  events.py  identity.py  ipc.py  multi_agent.py  planner.py  router.py  scheduler.py  sessions.py  socket_server.py  sudo.py  tool_defs.py  watchdog.py
macroa/memory/: __init__.py  compactor.py  extractor.py  formatter.py  retriever.py  semantic.py
macroa/research/: __init__.py  orchestrator.py  subagent.py  synthesizer.py
macroa/skills/: agent_skill.py  chat_skill.py  file_skill.py  memory_skill.py  reminder_skill.py  research_skill.py  shell_skill.py  vfs_skill.py
macroa/stdlib/: schema.py  text.py
macroa/tools/: base.py  heartbeat.py  installer.py  registry.py  runner.py
macroa/tools/examples/call_me/: tool.py
macroa/vfs/: __init__.py  base.py  layout.py  local.py  memory.py  vfs.py
macroa/web/: app.py  webhooks.py
macroa/web/static/: dashboard.html
tests/: test_budget.py  test_channels.py  test_compaction.py  test_cost_tracking.py  test_daemon.py  test_drivers.py  test_identity.py  test_installer.py  test_ipc.py  test_kernel.py  test_memory_v2.py  test_memory_v3.py  test_multi_agent.py  test_network_events_audit.py  test_planner.py  test_research.py  test_router_json.py  test_scheduler.py  test_semantic_memory.py  test_sessions.py  test_stdlib.py  test_streaming.py  test_tools.py  test_v3.py  test_vfs.py  test_watchdog.py  test_web.py  test_webhooks.py  test_wizard.py
