[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macroa"
version = "0.2.9"
description = "Personal AI OS — kernel, drivers, skills, tools, and a web API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "aniolowie" }]
keywords = ["ai", "llm", "assistant", "os", "automation", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Operating System",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0",
]

[project.urls]
Homepage   = "https://github.com/aniolowie/Macroa"
Repository = "https://github.com/aniolowie/Macroa"
Issues     = "https://github.com/aniolowie/Macroa/issues"
Changelog  = "https://github.com/aniolowie/Macroa/blob/main/CHANGELOG.md"

[project.optional-dependencies]
web = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27",
]

[project.scripts]
macroa = "macroa.cli.main:cli"

[tool.setuptools.packages.find]
where   = ["."]
include = ["macroa*"]

[tool.setuptools.package-data]
"macroa" = ["web/static/*"]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["macroa"]
omit   = [
    "macroa/tools/examples/*",
    "macroa/web/static/*",
    "macroa/cli/main.py",
    "macroa/cli/renderer.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 70
